translated gatsby and other book without removing legal things